@@ -2,7 +2,7 @@ use strict;
 use warnings;
 package App::rdfns;
 {
-  $App::rdfns::VERSION = '20131115';
+  $App::rdfns::VERSION = '20131205';
 }
 #ABSTRACT: quickly get common URI namespaces
 #VERSION
@@ -81,9 +81,11 @@ sub version {
 
 1;
 
-
 __END__
+
 =pod
+
+=encoding UTF-8
 
 =head1 NAME
 
@@ -91,13 +93,11 @@ App::rdfns - quickly get common URI namespaces
 
 =head1 VERSION
 
-version 20131115
+version 20131205
 
 =head1 SEE ALSO
 
 This module implements the command line client L<rdfns>.
-
-=encoding utf8
 
 =head1 AUTHOR
 
@@ -111,4 +111,3 @@ This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
 
 =cut
-
