@@ -2,7 +2,7 @@ use strict;
 use warnings;
 package RDF::NS::Trine;
 {
-  $RDF::NS::Trine::VERSION = '20131115';
+  $RDF::NS::Trine::VERSION = '20131205';
 }
 #ABSTRACT: Popular RDF namespace prefixes from prefix.cc as RDF::Trine nodes
 
@@ -23,9 +23,11 @@ sub BLANK {
 
 1;
 
-
 __END__
+
 =pod
+
+=encoding UTF-8
 
 =head1 NAME
 
@@ -33,12 +35,12 @@ RDF::NS::Trine - Popular RDF namespace prefixes from prefix.cc as RDF::Trine nod
 
 =head1 VERSION
 
-version 20131115
+version 20131205
 
 =head1 SYNOPSIS
 
   use RDF::NS::Trine;
-  use constant NS => RDF::NS::Trine->new('20131115');
+  use constant NS => RDF::NS::Trine->new('20131205');
 
   NS->foaf_Person;        # iri('http://xmlns.com/foaf/0.1/Person')
   NS->uri('foaf:Person);  #  same RDF::Trine::Node::Resource
@@ -63,8 +65,6 @@ installed automatically together with L<RDF::NS>!
 
 Returns a new L<RDF::Trine::Node::Blank>.
 
-=encoding utf8
-
 =head1 AUTHOR
 
 Jakob Voß
@@ -77,4 +77,3 @@ This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
 
 =cut
-
