@@ -1210,3 +1210,19 @@ qb4o	http://purl.org/olap#	20131115
 refe	http://orion.tw.rpi.edu/~xgmatwc/refe/	20131115
 swperson	http://data.semanticweb.org/person/	20131115
 ub	http://www.lehigh.edu/~zhp2/2004/0401/univ-bench.owl#	20131115
+bbc	http://www.bbc.co.uk/ontologies/news/	20131205
+bibframe	http://bibframe.org/vocab/	20131205
+bm	http://bio2rdf.org/	20131205
+emoca	http://ns.inria.fr/emoca#	20131205
+emotion	http://ns.inria.fr/emoca#	20131205
+limoo	http://purl.org/LiMo/0.1/	20131205
+mged	http://mged.sourceforge.net/ontologies/MGEDOntology.owl#	20131205
+mocanal	http://www.semanticweb.org/asow/ontologies/2013/9/untitled-ontology-36#	20131205
+muldicat	http://iflastandards.info/ns/muldicat#	20131205
+nidm	http://nidm.nidash.org/	20131205
+paia	http://purl.org/ontology/paia#	20131205
+pubmed	http://bio2rdf.org/pubmed_vocabulary:	20131205
+ro	http://purl.org/obo/owl/ro#	20131205
+sdo	http://schema.org/	20131205
+service	http://purl.org/ontology/service#	20131205
+tr	http://www.thomsonreuters.com/	20131205
