@@ -1,3 +1,9 @@
+20131205 2013-125  (1170 prefixes)
+ - added:   bbc bibframe bm emoca emotion limoo mged mocanal muldicat nidm
+            paia pubmed service tr
+ - changed: ro sdo
+
+
 20131115 2013-1115 (1156 prefixes)
  - added:   amalgame camelot conf crv csm curr dbrc dbyago frad gq hxl mp
             ogbd olad ox pat pext qb4o refe swperson ub
